--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ and open the template in the editor.
                <div class="container">
                    <div class="item1">
                        <a href="#">
-                           <img src="images/camera.jpg" class="thumbnail1">
+                           <img src="camera.jpg" class="thumbnail1">
                               <div class="caption1">
                                <h2>Cameras</h2>
                                <p>Choose among the best available in the world.</p>
@@ -50,7 +50,7 @@ and open the template in the editor.
                    </div>
                    <div class="item2">
                        <a href="#">
-                           <img src="images/watch.jpg" class="thumbnail2">
+                           <img src="watch.jpg" class="thumbnail2">
                               <div class="caption2">
                                <h2>Watches</h2>
                                <p>Original watches from the best brands.</p>
@@ -59,7 +59,7 @@ and open the template in the editor.
                     </div>  
                     <div class="item3">
                        <a href="#">
-                           <img src="images/shirt.jpg" class="thumbnail3">
+                           <img src="shirt.jpg" class="thumbnail3">
                               <div class="caption3">
                                <h2>Shirts</h2>
                                <p>Our exquisite collection of shirts.</p>
